cube fix the second (#3)
* move this back

oops i reverted too much

* partially colour back panels

this creates small angles but i don't feel like caring at this moment, if we really want to we can use js instead of css for rendering

--- a/cube.css
+++ b/cube.css
@@ -51,9 +51,12 @@
 .cube:nth-of-type(6) {
 	--cf: 2;
 }
-.cube.cube:nth-of-type(1),
-.cube.cube:nth-of-type(4),
-.cube.cube:nth-of-type(5) {
-	border-color: #444;
+.cube:nth-of-type(1),
+.cube:nth-of-type(4),
+.cube:nth-of-type(5) {
+	border-color: #fff #444 #444 #fff;
 	border-width: 5px;
+}
+.cube:nth-of-type(5) {
+	border-color: #444 #444 #fff #fff;
 }
